--- a/client/src/components/forms/form.css
+++ b/client/src/components/forms/form.css
@@ -96,6 +96,14 @@
 .form-item-wrapper input:focus {
     outline: none;
 }
+.form-form-error { /* error */
+    color: red;
+    font-weight: bold;
+}
+.form-form-info {
+    font-size: 12px;
+    color: grey;
+}
 .form-form button {
     background-color: rgb(54, 121, 204);
     color: white;
