--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     width: 100vw;
     max-width: 100%;
+    font-size: 14px;
 }
 
 code {
@@ -37,6 +38,48 @@ button {
     margin: 0;
     border: 0;
     outline: none;
+}
+
+input {
+   font-size: 14px;
+}
+input:focus, textarea:focus {
+    outline: none;
+}
+textarea {
+    font-size: 14px;
+    resize: none;
+}
+
+
+
+.iframe-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.iframe-close-icon {
+    position: absolute;
+    top: calc(50% - 260px);
+    right: calc(50% - 360px);
+    color: grey;
+}
+.iframe-close-icon:hover {
+    color: red;
+}
+.iframe-wrapper iframe{
+    width: 800px;
+    height: 600px;
+    border: none;
+    box-shadow: 0 0 20px 0px rgb(0, 0, 0);
 }
 
 
