--- a/client/src/components/createpost/texteditor.css
+++ b/client/src/components/createpost/texteditor.css
@@ -110,10 +110,12 @@
 .text-editor-preview {
     background-color: rgb(250, 250, 250);
     border-radius: 0 0 5px 0;
+    display: block;
 }
 .text-editor-preview p{
     width: 100%;
-    height: 17px;
+    position: relative;
+    min-height: 17px;
 }
 .text-editor-minimize{
     width: 0 !important;
@@ -142,4 +144,14 @@
 }
 .text-editor-button button:hover {
     opacity: 0.7;
+}
+.text-editor-button-disabled button {
+    cursor: not-allowed;
+    opacity: 0.7;
+}
+.text-editor-response {
+    width: calc(100% - 40px);
+    padding: 10px 20px;
+    font-weight: bold;
+    color: rgb(54, 121, 204);
 }
