--- a/client/src/components/card.css
+++ b/client/src/components/card.css
@@ -1,8 +1,8 @@
 .card-wrapper {
-    width: 680px;
+    width: 660px;
     min-height: 200px;
     height: auto;
-    margin: 20px 10px 0 0;
+    margin: 20px 0 0 0;
     border-radius: 5px;
     border: solid 2px rgb(200, 200, 200);
     display: flex;
