--- a/client/src/components/info.css
+++ b/client/src/components/info.css
@@ -2,7 +2,7 @@
     background-color: white;
     width: 300px;
     min-height: 200px;
-    margin: 20px 0 20px 10px;
+    margin: 20px 0 0 0;
     border-radius: 5px;
     overflow: hidden;
     position: relative;
