--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,38 +52,32 @@ textarea {
     resize: none;
 }
 
-
-
-.iframe-wrapper {
+.notification-active {
+    width: 300px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
     position: fixed;
-    top: 0;
-    left: 0;
+    left: calc(50% - 150px);
+    bottom: 20px;
+    z-index: 9999;
+    background-color: white;
+    color: black;
+    border-left: 10px solid rgb(54, 121, 204);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    opacity: 1;
+    transition: 0.5s;
+}
+.notification-active span {
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    font-weight: bold;
 }
-.iframe-wrapper-hidden {
-    display: none;
-}
-.iframe-close-icon {
-    position: absolute;
-    top: calc(50% - 260px);
-    right: calc(50% - 360px);
-    color: grey;
-}
-.iframe-close-icon:hover {
-    color: red;
-}
-.iframe-wrapper iframe{
-    width: 800px;
-    height: 600px;
-    border: none;
-    box-shadow: 0 0 20px 0px rgb(0, 0, 0);
+.notification-inactive {
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
 }
 
 
