--- a/client/src/components/comment/comment.css
+++ b/client/src/components/comment/comment.css
@@ -23,7 +23,7 @@
     justify-content: flex-start;
 }
 .comment-post-sidebar {
-    width: 35px;
+    width: 50px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -31,7 +31,7 @@
     justify-content: flex-start;
 }
 .comment-post-content {
-    width: calc(100% - 35px);
+    width: calc(100% - 50px);
     padding: 10px 10px 10px 0;
     display: flex;
     flex-direction: column;
@@ -54,8 +54,68 @@
 }
 .comment-post-buttons {
     width: 100%;
+    height: 35px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    color: grey;
+}
+.comment-post-buttons-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 0 6px;
+    height: 30px;
+    cursor: pointer;
+}
+.comment-post-buttons-item:hover {
+    background-color: rgb(220, 220, 220);
+}
+.comment-post-buttons-item span {
+    padding: 0 3px;
+    font-weight: bold;
+    text-transform: capitalize;
+    font-size: 12px;
+    line-height: 30px;
+    height: 30px;
+}
+
+
+.comment-login {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.comment-login span {
+    color: grey;
+    font-weight: bold;
+    padding: 0 20px;
+}
+.comment-login-button {
+    margin: 0 10px;
+    width: 100px;
+    height: 25px;
+    color: white;
+    background-color: rgb(54, 121, 204);
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 12px;
+}
+.comment-signup-button {
+    margin: 0 10px;
+    width: 100px;
+    height: 25px;
+    color: rgb(54, 121, 204);
+    background-color: white;
+    border: solid 1px rgb(54, 121, 204);
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 12px;
 }
