--- a/client/src/components/createpost/texteditor.css
+++ b/client/src/components/createpost/texteditor.css
@@ -148,6 +148,7 @@
     border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
+    text-transform: capitalize;
 }
 .text-editor-button button:hover {
     opacity: 0.7;
