--- a/client/src/components/accountSetting/accountSetting.css
+++ b/client/src/components/accountSetting/accountSetting.css
@@ -97,24 +97,28 @@
 .post-entry-wrapper-active {
     width: calc(100% - 20px);
     margin: 10px 0;
-    border: 2px solid #e17107;
-    border-radius: 20px;
-    padding: 10px 20px;
-    transition: padding 0.5s, margin 0.5s;
-    cursor: pointer;
-}
-.post-entry-wrapper-active:hover {
-    background-color: rgba(225,113,7,0.1);
+    transition: 0.5s;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
 }
 .post-entry-wrapper-inactive {
     width: calc(100% - 20px);
-    overflow: hidden;
-    margin: 0;
-    border: none;
     height: 0;
-    padding: 0;
+    overflow: hidden;
     visibility: hidden;
-    transition: padding 0.5s, margin 0.5s;
+    transition: 0.5s;
+}
+.post-entry {
+    width: calc(100% - 100px);
+    border: 2px solid #e17107;
+    border-radius: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+.post-entry:hover {
+    background-color: rgba(225,113,7,0.1);
 }
 .post-entry-title {
     font-weight: bold;
@@ -128,10 +132,38 @@
     font-size: 12px;
 }
 .post-entry-wrapper-noentry-active {
-    transition: 0.5s;
 }
 .post-entry-wrapper-noentry-inactive {
     visibility: hidden;
     height: 0;
-    transition: 0.5s;
+}
+.post-delete-unhide {
+    margin: 0 20px;
+    color: grey;
+    cursor: pointer;
+    position: relative;
+}
+.post-delete-unhide:hover {
+    color: rgb(255, 47, 25);
+}
+.post-delete-unhide:hover:after {
+    content: 'unhide';
+    position: absolute;
+    top: 100%;
+    left: -25%;
+}
+.post-delete-unsave {
+    margin: 0 20px;
+    color: grey;
+    cursor: pointer;
+    position: relative;
+}
+.post-delete-unsave:hover {
+    color: rgb(255, 47, 25);
+}
+.post-delete-unsave:hover:after {
+    content: 'unsave';
+    position: absolute;
+    top: 100%;
+    left: -25%;
 }
