--- a/client/src/components/accountSetting/accountSetting.css
+++ b/client/src/components/accountSetting/accountSetting.css
@@ -45,11 +45,9 @@
 .account-setting-headbar-item-active {
     border-bottom: 5px solid black;
     color: black;
-    line-height: 55px;
 }
 .account-setting-headbar-item-active:hover {
-    border-bottom: 5px solid rgb(54, 121, 204);
-    color: rgb(54, 121, 204);
+    opacity: 0.7;
     transition: 0.3s;
 }
 .account-setting-headbar-logo {
@@ -166,4 +164,78 @@
     position: absolute;
     top: 100%;
     left: -25%;
+}
+.account-setting-username {
+    font-size: 72px;
+    color: rgb(54, 121, 204);
+    font-weight: bold;
+    margin: 0 0 50px 0;
+}
+
+
+/* INPUT */
+.account-setting-input-wrapper {
+    width: 500px;
+    height: 50px;
+    border: 2px solid #e17107;
+    border-radius: 20px;
+    font-weight: normal;
+    text-transform: capitalize;
+    color: black;
+    margin: 10px 0;
+    position: relative;
+    overflow: hidden;
+}
+.account-setting-input-label {
+    top: 0;
+    left: 20px;
+    position: absolute;
+    width: calc(100% - 40px);
+    height: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    transition: 0.3s;
+    z-index: 9999;
+}
+.account-setting-input-label-minimized {
+    top: 0;
+    left: 20px;
+    position: absolute;
+    width: calc(100% - 40px);
+    height: 20px;
+    line-height: 20px;
+    font-size: 12px;
+    transition: 0.3s;
+    z-index: 9999;
+}
+.account-setting-input-wrapper input {
+    top: 20px;
+    left: 20px;
+    position: absolute;
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+    border: 0;
+    width: calc(100% - 40px);
+}
+/* INPUT ENDS */
+
+.account-setting-submit-button {
+    width: 150px;
+    height: 50px;
+    background-color: rgba(225,113,7,1);
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 20px;
+    cursor: pointer;
+}
+.account-setting-submit-button:hover {
+    opacity: 0.7;
+}
+.account-setting-submit-button-disabled {
+    opacity: 0.7;
+    cursor: not-allowed !important;
 }
