--- a/client/src/components/accountSetting/accountSetting.css
+++ b/client/src/components/accountSetting/accountSetting.css
@@ -36,11 +36,11 @@
     line-height: 50px;
     padding: 0 10px;
     cursor: pointer;
-    transition: 0.3s;
+    transition: 0.1s;
 }
 .account-setting-headbar-item:hover {
     opacity: 0.7;
-    transition: 0.3s;
+    transition: 0.1s;
 }
 .account-setting-headbar-item-active {
     border-bottom: 5px solid black;
@@ -48,7 +48,7 @@
 }
 .account-setting-headbar-item-active:hover {
     opacity: 0.7;
-    transition: 0.3s;
+    transition: 0.1s;
 }
 .account-setting-headbar-logo {
 }
@@ -193,7 +193,7 @@
     width: calc(100% - 40px);
     height: 50px;
     line-height: 50px;
-    font-size: 20px;
+    font-size: 16px;
     transition: 0.3s;
     z-index: 99;
 }
@@ -206,7 +206,7 @@
     line-height: 20px;
     font-size: 12px;
     transition: 0.3s;
-    z-index: 9999;
+    z-index: 99;
 }
 .account-setting-input-wrapper input {
     top: 20px;
@@ -231,6 +231,7 @@
     text-align: center;
     border-radius: 20px;
     cursor: pointer;
+    margin: 10px 0 10px 355px;
 }
 .account-setting-submit-button:hover {
     opacity: 0.7;
