--- a/client/src/components/frontpage.css
+++ b/client/src/components/frontpage.css
@@ -6,30 +6,36 @@
 }
 
 .main-content-wrapper {
-    width: 100%;
+    max-width: 100%;
+    padding: 0 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
 }
-.main-content-wrapper-box {
-    width: 1000px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
 .posts-wrapper {
-    width: 660px;
-    margin: 0 20px;
+    margin: 20px 10px 0 10px;
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 }
+.post-wrapper-fullscreen {
+    width: 100%;
+}
 .infos-wrapper {
     width: 300px;
+    margin: 0 10px;
     height: auto;
 }
 
+@media only screen and (max-width: 800px) {
+    .infos-wrapper {
+        display: none;
+    }
+    .posts-wrapper {
+        width: 100%;
+        margin: 20px 0;
+    }
+}
