--- a/client/src/components/posts/card.css
+++ b/client/src/components/posts/card.css
@@ -2,7 +2,7 @@
     width: 660px;
     min-height: 200px;
     height: auto;
-    margin: 20px 0 0 0;
+    margin: 0 0 20px 0;
     border-radius: 5px;
     border: solid 2px rgb(200, 200, 200);
     display: flex;
@@ -21,11 +21,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    padding-top: 10px;
 }
 .card-sidebar-voteup {
     color: grey;
     cursor: pointer;
-    padding-top: 10px;
 }
 .card-sidebar-voteup:hover {
     color: rgb(255, 47, 25);
@@ -33,7 +33,6 @@
 .card-sidebar-voteup-voted {
     color: rgb(255, 47, 25);
     cursor: pointer;
-    padding-top: 10px;
 }
 .card-sidebar-votedown {
     color: grey;
@@ -126,4 +125,10 @@
     font-size: 14px;
     line-height: 30px;
     height: 30px;
+}
+
+@media only screen and (max-width: 800px) {
+    .card-wrapper {
+        width: 100%;
+    }
 }
