--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -62,7 +62,7 @@
 .header-fixed-search {
     margin: 0 10px;
     width: 100%;
-    padding: 0 20px;
+    padding: 0 5px;
     background-color: rgb(240, 240, 240);
     color: grey;
     border-radius: 5px;
@@ -74,7 +74,7 @@
     margin: 0;
     border: 0;
     height: 100%;
-    width: calc(100% - 40px);
+    width: calc(100% - 10px);
     font-size: 1em;
     background-color: inherit;
     color: inherit;
@@ -83,6 +83,16 @@
 .header-fixed-search:hover, .header-fixed-search:focus {
     background-color: white;
     border: solid 1px rgb(100, 100, 100);
+}
+.header-fixed-search-icon {
+    cursor: pointer;
+    padding: 2px 10px 0 10px;
+    margin: 0 5px;
+    border-radius: 5px;
+}
+.header-fixed-search-icon:hover {
+    color: white;
+    background-color: rgb(54, 121, 204);
 }
 .header-fixed-tools {
     display: flex;
